--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=https://meolhe.com/api
+REACT_APP_API_URL=https://api.barbeariatech.meolhe.com/api
+# REACT_APP_API_URL=http://localhost:8000/api
